@@ -79,7 +79,6 @@ artinfo = {
 		},
 		# I want season fanart! From press shots or whatever released for/during a season. New characters added, old characters removed, season specific sets and objects. Anthology series like 'True Detective' and 'American Horror Story' will have fanart that is nearly always specific to a season.
 		# 'fanart': {
-        #     'localizeid': 32121,
         #     'autolimit': MULTIPLE_IMAGE_LIMIT,
         #     'multiselect': True
 		# },
