@@ -1,13 +1,8 @@
 import xbmcgui
 
-from devhelper import pykodi
+from utils import localize as L
 
 ACTION_SELECTSERIES = 32400
-
-addon = pykodi.Addon()
-
-def localized(messageid):
-    return addon.getLocalizedString(messageid)
 
 class SeriesSelector(xbmcgui.WindowXMLDialog):
     def __init__(self, *args, **kwargs):
@@ -22,7 +17,7 @@ class SeriesSelector(xbmcgui.WindowXMLDialog):
         return self.selected
 
     def onInit(self):
-        self.getControl(1).setLabel(localized(ACTION_SELECTSERIES))
+        self.getControl(1).setLabel(L(ACTION_SELECTSERIES))
         self.getControl(3).setVisible(False)
         self.getControl(5).setVisible(True)
         self.getControl(5).setLabel('$LOCALIZE[186]')
